[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/state_machine/inspector/state_machine_graph_edit.gd" type="Script" id=1]
[ext_resource path="res://addons/state_machine/inspector/context_menu.gd" type="Script" id=2]
[ext_resource path="res://addons/state_machine/icons/icon_choice_32.png" type="Texture" id=5]
[ext_resource path="res://addons/state_machine/icons/icon_cog_32.png" type="Texture" id=6]

[node name="StateMachineGraphEdit" type="GraphEdit"]
margin_right = 400.0
margin_bottom = 1000.0
rect_min_size = Vector2( 400, 1000 )
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_offset = Vector2( -293, 0 )
script = ExtResource( 1 )

[node name="Node" type="Node" parent="."]

[node name="ContextMenu" type="PopupMenu" parent="Node"]
margin_left = 143.0
margin_top = 214.0
margin_right = 163.0
margin_bottom = 234.0
items = [ "Add State", ExtResource( 6 ), 0, false, false, 0, 0, null, "", false, "Add Condition", ExtResource( 5 ), 0, false, false, 1, 0, null, "", false ]
script = ExtResource( 2 )

[node name="StateFileDialog" type="FileDialog" parent="Node"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
window_title = "Open a File"
dialog_hide_on_ok = true
mode = 0
filters = PoolStringArray( "*.tres" )

[node name="StateAcceptDialog" type="AcceptDialog" parent="Node"]
margin_right = 83.0
margin_bottom = 58.0

[node name="ConditionFileDialog" type="FileDialog" parent="Node"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
window_title = "Open a File"
dialog_hide_on_ok = true
mode = 0
filters = PoolStringArray( "*.tres" )

[node name="ConditionAcceptDialog" type="AcceptDialog" parent="Node"]
margin_right = 83.0
margin_bottom = 58.0

[connection signal="condition_requested" from="Node/ContextMenu" to="Node/ConditionFileDialog" method="popup_centered"]
[connection signal="id_pressed" from="Node/ContextMenu" to="Node/ContextMenu" method="_on_id_pressed"]
[connection signal="state_requested" from="Node/ContextMenu" to="Node/StateFileDialog" method="popup_centered"]
[connection signal="file_selected" from="Node/StateFileDialog" to="." method="_on_state_file_selected"]
[connection signal="confirmed" from="Node/StateAcceptDialog" to="Node/StateFileDialog" method="popup_centered"]
[connection signal="file_selected" from="Node/ConditionFileDialog" to="." method="_on_condition_file_selected"]
[connection signal="confirmed" from="Node/ConditionAcceptDialog" to="Node/ConditionFileDialog" method="popup_centered"]
